# Blumelein-Server

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  FIRESTORE_SETUP.md  QUICKSTART_DEPLOYMENT.md  README.md  SEMANTIC_VERSIONING_SETUP.md  TERRAFORM_DEPLOYMENT.md  TODO.md  VERSIONING.md  VERSIONING_QUICK_REFERENCE.md  pyproject.toml  run.sh  setup.py
.cursor/rules/: blumelein-app.mdc
.github/workflows/: build-deploy.yaml
scripts/: README.md  create-service-account-key.sh  setup-artifact-registry.sh  setup-service-account.sh  verify-service-account.sh
src/blumelein_server/: __init__.py  config.py  main.py
src/blumelein_server/database/: __init__.py  adapter.py  factory.py  firestore_adapter.py
src/blumelein_server/models/: __init__.py  schemas.py
src/blumelein_server/routers/: __init__.py  manage.py  orders.py  payments.py
terraform/: firestore.tf  main.tf  provider.tf  terraform.tfvars.template  variables.tf
