[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blumelein-server"
version = "1.0.12"
description = "REST API for a flower shop web application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "google-cloud-firestore>=2.16.0",
    "pydantic-settings>=2.6.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "stripe>=11.0.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pre-commit>=4.5.0",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.0.0",
    "python-semantic-release>=10.3.1",
]

[tool.semantic_release]
# Where to update the version
version_toml = [
  "pyproject.toml:project.version"
]
version_variables = [
  "setup.py:version=\"(?P<version>\\d+\\.\\d+\\.\\d+)\""
]
# Use Conventional Commits for deciding bumps
commit_parser = "conventional"
